--- a/experiments/cookie-caps/index.html
+++ b/experiments/cookie-caps/index.html
@@ -217,8 +217,17 @@
 /*
 	Debug
 */
+function readCookie(cookieName) {
+	var cookie = d.cookie.split('; '), i;
+	for (i = 0; i < cookie.length; i++) {
+		if (cookie[i].indexOf(cookieName + '=') === 0)
+			return cookie[i].substr(cookieName.length + 1);
+	}
+	return undefined;
+}
+
 function printDebug() {
-	d.getElementById('cookieValue').innerHTML = 'Cookie: <code>' + d.cookie + '</code>';
+	d.getElementById('cookieValue').innerHTML = 'Cookie: <code>' + readCookie('RESS') + '</code>';
 }
 printDebug();
 MT.event.add('timedResize', printDebug);
